UCF-APR2.4/ftr main/force-app/main/default/objects/Knowledge__kav/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <description>Date only value from the Article Created Date field (which is a Date/Time field)</description>
    <formula>DATEVALUE( ArticleCreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date only value from the Article Created Date field (which is a Date/Time field)</inlineHelpText>
    <label>Created</label>
    <type>Date</type>
</CustomField>