UCF-APR2.4/ftr main/force-app/main/default/objects/Knowledge__kav/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <description>Used for providing INTERNAL ONLY notes to Knowledge Articles (provides non-client facing descriptions)</description>
    <inlineHelpText>Used for providing INTERNAL ONLY notes to Knowledge Articles (provides non-client facing descriptions)</inlineHelpText>
    <label>Internal Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>