UCF-APR2.4/ftr main/force-app/main/default/objects/Knowledge__kav/fields/Last_Published__c.field-meta.xml
<CustomField>
    <fullName>Last_Published__c</fullName>
    <description>Date only value from the Last Published Date field (which is a Date/Time field)</description>
    <formula>DATEVALUE( LastPublishedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date only value from the Last Published Date field (which is a Date/Time field)</inlineHelpText>
    <label>Last Published</label>
    <type>Date</type>
</CustomField>