UCF-APR2.4/ftr main/force-app/main/default/objects/Knowledge__kav/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <description>Used to manage a Knowledge Article review process when it is in a Publication Status = Draft</description>
    <inlineHelpText>Used to manage a Knowledge Article review process when it is in a Publication Status = Draft</inlineHelpText>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-New</fullName>
                <default>true</default>
                <label>1-New</label>
            </value>
            <value>
                <fullName>2-Submitted</fullName>
            </value>
            <value>
                <fullName>3-Under Review</fullName>
            </value>
            <value>
                <fullName>8-Rejected</fullName>
            </value>
            <value>
                <fullName>9-Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>